[package]
name = "telemetry-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
hyper = { version = "0.14", features = ["server"], default-features = false }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["rt", "time", "rt-multi-thread"] }
tonic = { version = "0.11.0", default-features = false }
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["trace", "rt-tokio"] }
opentelemetry-http = "0.11.0"
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-otlp = { version = "0.15.0", features = [
  "trace",
  # required to make grpc requests
  "tls-roots",
] }
